@@ -17,3 +17,4 @@
 #undef DISABLE_SHARED_HANDLES
 #undef HAVE_TIMEZONE
 #undef HAVE_TM_GMTOFF
+#undef MONO_SIZEOF_SUNPATH
